# python-basic-app

./: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
py_cli_app/: main.py
